items from example open in the modal and can be added to, modal does not display infromation at this time

--- a/try2/try2/Views/DetailPage.xaml
+++ b/try2/try2/Views/DetailPage.xaml
@@ -8,9 +8,9 @@
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
             <StackLayout Orientation="Horizontal">
-                <Label Text="Name:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
-                <Label Text="{Binding Name}" FontSize="Medium" FontAttributes="Bold" />
-            </StackLayout>
+				<Label Text="Name:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
+				<Label Text="{Binding Item.Name}" FontSize="Medium" FontAttributes="Bold" />
+			</StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Label Text="ID:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
                 <Label Text="{Binding Id}" FontSize="Medium" FontAttributes="Bold" />
