--- a/try2/try2/Views/NewItemPage.xaml
+++ b/try2/try2/Views/NewItemPage.xaml
@@ -14,6 +14,10 @@
     
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
+            <Label Text="Name" FontSize="Medium" />
+            <Entry Text="{Binding Item.Name}" d:Text="Item name" FontSize="Small" />
+            <Label Text="ID" FontSize="Medium" />
+            <Editor Text="{Binding Item.Id}" d:Text="Item description" FontSize="Small" Margin="0" />
             <Label Text="Text" FontSize="Medium" />
             <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
             <Label Text="Description" FontSize="Medium" />
