--- a/try2/try2/Views/DetailPage.xaml
+++ b/try2/try2/Views/DetailPage.xaml
@@ -9,19 +9,19 @@
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
             <StackLayout Orientation="Horizontal">
 				<Label Text="Name:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
-				<Label Text="{Binding Item.Name}" FontSize="Medium" FontAttributes="Bold" />
+				<Label Text="{Binding Name}" FontSize="Medium" FontAttributes="Bold" />
 			</StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Label Text="ID:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
-                <Label Text="{Binding Item.Id}" FontSize="Medium" FontAttributes="Bold" />
+                <Label Text="{Binding Id}" FontSize="Medium" FontAttributes="Bold" />
             </StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Label Text="Text:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
-                <Label Text="{Binding Item.Text}" FontSize="Medium" FontAttributes="Bold" />
+                <Label Text="{Binding Text}" FontSize="Medium" FontAttributes="Bold" />
             </StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Label Text="Description:" FontSize="Medium" HorizontalOptions="FillAndExpand" />
-                <Label Text="{Binding Item.Description}" FontSize="Medium" FontAttributes="Bold" />
+                <Label Text="{Binding Description}" FontSize="Medium" FontAttributes="Bold" />
             </StackLayout>
             <Button x:Name="dismissButton" Text="Dismiss" Clicked="OnDismissButtonClicked" />
         </StackLayout>
