--- a/try2/try2/Views/ItemsPage.xaml
+++ b/try2/try2/Views/ItemsPage.xaml
@@ -13,6 +13,8 @@
     </ContentPage.ToolbarItems>
 
     <StackLayout>
+        <ListView x:Name="listView" ItemSelected="OnItemSelected" />
+
         <StackLayout>
             <ListView x:Name="ItemsListView"
                 ItemsSource="{Binding Items}"
@@ -26,11 +28,7 @@
                 <d:ListView.ItemsSource>
                     <x:Array Type="{x:Type x:String}">
                         <x:String>First Item</x:String>
-                        <x:String>Second Item</x:String>
-                        <x:String>Third Item</x:String>
-                        <x:String>Forth Item</x:String>
-                        <x:String>Fifth Item</x:String>
-                        <x:String>Sixth Item</x:String>
+                        <x:String>Second Item</x:String>\
                     </x:Array>
                 </d:ListView.ItemsSource>
                 <ListView.ItemTemplate>
